# IMU_Visualizer

./: CMakeLists.txt  ReadMe.md
include/core/: imu_data.h
include/imu_visualizer/: common.h
pico/: CMakeLists.txt
pico/include/: config.h  imu.h  network.h
pico/src/: imu.cpp  main.cpp  network.cpp
src/: main.cpp
src/core/: imu_data.h
src/processing/: data_processor.cpp  data_processor.h
src/processing/filters/: complementary_filter.h  filter_factory.h  kalman_filter.h  madgwick_filter.h  orientation_filter.h
src/transport/: mock_transport.cpp  mock_transport.h  serial_transport.cpp  serial_transport.h  tcp_transport.h  transport_interface.h
src/ui/: main_window.cpp  main_window.h
src/visualization/: gl_widget.cpp  gl_widget.h
